index finalizado, completamente responsive

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                 <img src="./image/Logo_header.png" alt="logo Spa Flora"> <!--Imagen logo header index-->
             </div>
             <ul class="items_nav"> <!--Menú de navegación index-->
-                <li><a class="items_menu" href="#inicio">INICIO</a></li>
-                <li><a class="items_menu" href="#nosotros">NOSOTROS</a></li>
-                <li ><a class="items_menu" href="#servicios">SERVICIOS</a></li>
-                <li ><a class="items_menu" href="#contactos">CONTACTOS</a></li>
-                <li><a class="items_menu" id="btn--login" href="./pages/login.html">LOGIN</a></li>
-                <li><a  class="items_menu" id="btn--reserva" href="./pages/reservas.html">RESERVAS</a></li>
+                <li><a href="#inicio">INICIO</a></li>
+                <li><a href="#nosotros">NOSOTROS</a></li>
+                <li ><a href="#servicios">SERVICIOS</a></li>
+                <li ><a href="#contactos">CONTACTOS</a></li>
+                <li><a  href="./pages/login.html">LOGIN</a></li>
+                <li><a  href="./pages/reservas.html">RESERVAS</a></li>
             </ul>
         </nav>
         <!--Imagen de hero banner header index-->
@@ -40,7 +40,7 @@
     <!--Contenedor main acerca de nosotros-->
     <main class="main_index">
             <!--Primera imagen del equipo con cliente de flora spa-->
-        <div class="contenedor_main_index">
+        <section class="contenedor_main_index">
             <div class="imagen_equipo_clienta"  >
                 <img src="./image/Equipo de trabajo_clienta.png" alt="Equipo de trabajo Spa Flora">
             </div>
@@ -50,20 +50,20 @@
             </div>
                 <!--Parráfo  equipo de flora spa-->
             <div class="informacion_equipo_de_trabajo" id="nosotros">
-                <h2 class="subtitulos_index"> ACERCA DE NOSOTROS</h2>
-                <p class="parrafo_equipo_de_trabajo">
+                <h2 > ACERCA DE NOSOTROS</h2>
+                <p>
                     En Flora Spa somos un spa de uñas dedicado a cuidar la belleza y el bienestar de nuestras clientas y clientes. Ofrecemos una amplia variedad de servicios de manicure, pedicure y técnicas especializadas en uñas, realizados por un equipo profesional altamente capacitado. Nuestro espacio está diseñado para brindar comodidad, tranquilidad y una atención cálida, para que cada visita sea una experiencia agradable y relajante. En Flora Spa trabajamos con productos de calidad y técnicas actuales, garantizando resultados duraderos y un servicio personalizado que se adapta a tus gustos y necesidades.
                 </p>
             </div>
-        </div>
+        </section>
         <!--Contenedor main información servicios -->
-        <div class="contenedor2_main_index">
+        <section class="contenedor2_main_index">
             <div class="contenido_servicios_index">
                 <div class="div_subtitulos_index">
-                    <h2 class="subtitulos_servicios_index">SERVICIOS</h2>
+                    <h2><a id="servicios" href="#servicios">SERVICIOS</a></h2>
                 </div>
                 <div class="servicios_manicure_index">
-                    <h3  class="subtitulos_index_servicios" id="servicios"><a href="./pages/servicios.html"></a>Manicure</h3>
+                    <h3 ><a href="./pages/servicios.html">Manicure</a></h3>
                     <ul class="listas_servicios">
                         <li>Tradicional</li>
                         <li>Semipermanente</li>
@@ -83,14 +83,14 @@
                     <img src="./image/servicios.jpg" alt="servicios Ofrecemos">
                 </div>
                 <div class="servicios_pedicure_index">
-                    <h3 class="subtitulos_index_servicios"><a href="./pages/servicios.html"></a>Pedicure</h3>
+                    <h3><a href="./pages/servicios.html">Pedicure</a></h3>
                     <ul class="listas_servicios">
                         <li>Tradicional</li>
                         <li>Semipermanente</li>
                     </ul>
                 </div>
                 <div class="servicios_otros_index">
-                    <h3 class="subtitulos_index_servicios"><a href="./pages/servicios.html"></a>Otros</h3>
+                    <h3><a href="./pages/servicios.html">Otros</a></h3>
                     <ul class="listas_servicios">
                         <li>Retoque en acrilico</li>
                         <li>Retiro acrilico, semipermanente de otro lugar, poly gel, press on</li>
@@ -98,10 +98,10 @@
                         <li>Forrado en una uña natural</li>
                 </div>
                 <div class="boton_mas_informacion">
-                    <a href="./pages/servicios.html" class="btn--mas_informacion">Más información</a>
+                    <a class="btn--mas_informacion" href="./pages/servicios.html">Más información</a>
                 </div>
             </div>
-        </div>
+        </section>
     </main>
     <!--finalización main index-->
 
