--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -17,13 +17,13 @@
             <div class="image_logo_servicios">
                 <img src="../image/Logo_header.png" alt="logo Spa Flora"> <!--Imagen logo header index-->
             </div>
-            <ul class="items_nav"> <!--Menú de navegación index-->
-                <li><a class="items_menu_servicios" href="../index.html">INICIO</a></li>
-                <li><a class="items_menu_servicios" href="../index.html #nosotros">NOSOTROS</a></li>
-                <li ><a class="items_menu_servicios" href="./servicios.html">SERVICIOS</a></li>
-                <li ><a class="items_menu_servicios" href="../index.html#contactos">CONTACTOS</a></li>
-                <li><a class="items_menu_servicios" id="btn--login-servicios" href="./pages/login.html">LOGIN</a></li>
-                <li><a  class="items_menu_servicios" id="btn--reserva-servicios" href="./pages/reservas.html">RESERVAS</a></li>
+            <ul class="items_servicios"> <!--Menú de navegación servicios-->
+                <li class="opciones_menu"><a class="items_menu_servicios" href="../index.html">INICIO</a></li>
+                <li class="opciones_menu"><a class="items_menu_servicios" href="../index.html #nosotros">NOSOTROS</a></li>
+                <li class="opciones_menu" ><a class="items_menu_servicios" href="./servicios.html">SERVICIOS</a></li>
+                <li class="opciones_menu" ><a class="items_menu_servicios" href="../index.html#contactos">CONTACTOS</a></li>
+                <li><a class="items_menu_servicios"  href="./pages/login.html">LOGIN</a></li>
+                <li><a  class="items_menu_servicios"  href="./pages/reservas.html">RESERVAS</a></li>
             </ul>
         </nav>
 </body>
