index terminado sin modificar animaciones, completamente listo y pagina de servicios completa lista y responsivo

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <header class="header_index">
         <nav class="nav_menu">
             <div class="image_logo">
-                <img src="./image/Logo_header.png" alt="logo Spa Flora"> <!--Imagen logo header index-->
+                <img src="./image/imagenes_index/Logo_header.png" alt="logo Spa Flora"> <!--Imagen logo header index-->
             </div>
             <ul class="items_nav"> <!--Menú de navegación index-->
-                <li><a href="#inicio">INICIO</a></li>
+                <li><a href="#inicio" class="link-inicio">INICIO</a></li>
                 <li><a href="#nosotros">NOSOTROS</a></li>
                 <li ><a href="#servicios">SERVICIOS</a></li>
                 <li ><a href="#contactos">CONTACTOS</a></li>
@@ -34,7 +34,7 @@
         </nav>
         <!--Imagen de hero banner header index-->
         <div class="contenedor_banner">
-            <img src="./image/hero_banner_index.jpg" alt="Imagen Spa" class="hero_banner">
+            <img src="./image/imagenes_index/hero_banner_index.jpg" alt="Imagen de fondo header de flora Spa" class="hero_banner">
         </div>
     </header>
     <!--Contenedor main acerca de nosotros-->
@@ -42,11 +42,11 @@
             <!--Primera imagen del equipo con cliente de flora spa-->
         <section class="contenedor_main_index">
             <div class="imagen_equipo_clienta"  >
-                <img src="./image/Equipo de trabajo_clienta.png" alt="Equipo de trabajo Spa Flora">
+                <img src="./image/imagenes_index/equipo_de_trabajo_clienta.png" alt="Equipo de trabajo Spa Flora">
             </div>
             <!--Segunda imagen del equipo de flora spa-->
             <div class="imagen_equipo">
-                <img src="./image/Equipo de trabajo.png" alt="Equipo de trabajo Spa Flora">
+                <img src="./image/imagenes_index/equipo_de_trabajo.png" alt="Equipo de trabajo Spa Flora">
             </div>
                 <!--Parráfo  equipo de flora spa-->
             <div class="informacion_equipo_de_trabajo" id="nosotros">
@@ -63,7 +63,7 @@
                     <h2><a id="servicios" href="#servicios">SERVICIOS</a></h2>
                 </div>
                 <div class="servicios_manicure_index">
-                    <h3 ><a href="./pages/servicios.html">Manicure</a></h3>
+                    <h3 ><a href="./pages/servicios.html#servicios_manicure">Manicure</a></h3>
                     <ul class="listas_servicios">
                         <li>Tradicional</li>
                         <li>Semipermanente</li>
@@ -80,17 +80,17 @@
                     </ul>
                 </div>
                 <div class="imagen_servicios">
-                    <img src="./image/servicios.jpg" alt="servicios Ofrecemos">
+                    <img src="./image/imagenes_index/servicios.jpg" alt="servicios Ofrecemos">
                 </div>
                 <div class="servicios_pedicure_index">
-                    <h3><a href="./pages/servicios.html">Pedicure</a></h3>
+                    <h3><a href="./pages/servicios.html#servicios_pedicure">Pedicure</a></h3>
                     <ul class="listas_servicios">
                         <li>Tradicional</li>
                         <li>Semipermanente</li>
                     </ul>
                 </div>
                 <div class="servicios_otros_index">
-                    <h3><a href="./pages/servicios.html">Otros</a></h3>
+                    <h3><a href="./pages/servicios.html#servicios_otros">Otros</a></h3>
                     <ul class="listas_servicios">
                         <li>Retoque en acrilico</li>
                         <li>Retiro acrilico, semipermanente de otro lugar, poly gel, press on</li>
